# DynamicChess

./: .gitignore  CMakeLists.txt
include/api/: board.h  piece.h  square.h
src/api/: CMakeLists.txt
